# sense-pi-local-recording-live

./: .gitignore  Project.txt  README.md  README_mpu6050_multi_logger.md  adxl203_ads1115_logger.py  analyze_param_noise.py  combined.py  debug_gui_features.py  debug_log_channels.py  debug_pc_ingest_worker.py  debug_pc_recorder_stream.py  debug_pi_via_ssh.py  debug_sampling_rate_debugging.py  decimation.py  deploy_pi.bat  download_param_sweep_data.bat  envelope_plot.py  live_plot.py  local_plot_runner.py  main.py  make_param_sweep_figures.py  make_param_sweep_figures_v2.py  pi_recorder.py  plotter.py  profile_benchmark.py  pyproject.toml  requirements-pi.txt  requirements.txt  run_live_plot.py  ssh_client.py  ssh_headless_test.py  sweep_mpu_rates_pi.bat  sweep_param_mpu6050.bat  temp.txt
User Manual/: User_Manual.docx
archive/: main_tk.py  plotter_legacy.py  run_codex_prompts.sh
codex-prompts/: 01-update-defaults.md  02-live-plots-tabs.md  1_01_offline_sync_and_open_latest.md  1_01_pi_sampling_and_decimation.md  1_02_pc_stream_reader_and_dispatch.md  1_02_signals_tab_mode_hint_offline.md  1_03_main_window_recording_stopped_offline_hint.md  1_03_ringbuffer_integration_and_windowing.md  1_04_offline_tab_copy_and_empty_state.md  1_04_signals_plot_qtimer_update.md  1_05_fft_pipeline_and_refresh.md  1_05_readme_download_logs_workflow.md  1_06_config_and_rate_selection_ui.md  1_07_network_jitter_and_resilience.md  1_Prompt_1_SSH_GUI_Design.md  1_Prompt_2_SSH_GUI_Implementation.md  1_phase1_1_minimal_qt_app.md  1_phase1_2_ssh_headless_core.md  2_02_pi_logger_use_helpers.md  (+83 more)
(+600 files in other folders)
