[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensepi"
version = "0.1.0"
description = "PySide6 desktop app and Raspberry Pi helpers for SensePi data logging"
authors = [
  {name = "SensePi", email = "maintainers@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.6",
  "numpy>=1.25",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "paramiko>=3.3",
  "PyYAML>=6.0",
]

[project.scripts]
sensepi-gui = "sensepi.gui.application:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["archive*"]
