[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensepi"
version = "x.x.x"
description = "SensePi MPU"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.6",
  "numpy>=1.25",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "paramiko>=3.3",
  "PyYAML>=6.0",
  "psutil>=5.9",
  "pyqtgraph>=0.13",
]

[project.scripts]
sensepi-gui = "sensepi.gui.application:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["archive*"]
